--- a/PetApp/Resource/Base.lproj/LaunchScreen.storyboard
+++ b/PetApp/Resource/Base.lproj/LaunchScreen.storyboard
@@ -23,7 +23,7 @@
                                     <constraint firstAttribute="height" constant="50" id="7fP-ze-ha9"/>
                                 </constraints>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Character" translatesAutoresizingMaskIntoConstraints="NO" id="aeN-PI-fEe">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="splash.png" translatesAutoresizingMaskIntoConstraints="NO" id="aeN-PI-fEe">
                                 <rect key="frame" x="0.0" y="552" width="393" height="300"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="300" id="5FS-83-YAk"/>
@@ -48,8 +48,8 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Character" width="375" height="303"/>
         <image name="logo" width="230" height="46.666667938232422"/>
+        <image name="splash.png" width="376" height="304"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
